--- a/src/components/NavLeft/index.less
+++ b/src/components/NavLeft/index.less
@@ -1,15 +1,17 @@
-.logo{
-    line-height: 90px;
-    padding-left: 20px;
-    background-color: #002140;
-    img{
-        height: 35px;
-    }
-    h1{
-        color:white;
-        display: inline-block;
-        vertical-align: middle;
-        font-size: 20px;
-        margin: 0 0 0 10px;
+.nav-left{
+    .logo{
+        line-height: 90px;
+        padding-left: 20px;
+        background-color: #002140;
+        img{
+            height: 35px;
+        }
+        h1{
+            color:white;
+            display: inline-block;
+            vertical-align: middle;
+            font-size: 20px;
+            margin: 0 0 0 10px;
+        }
     }
 }
